[package]
name = "bvr"
description = "Chew through logs."
categories = ["command-line-utilities"]
authors = ["An Tran <antranprm@gmail.com>"]
version = "0.0.3"
edition = "2021"
license = "MIT"
keywords = ["cli", "pager"]
homepage = "https://github.com/Avarel/bvr"
repository = "https://github.com/Avarel/bvr"
readme = "README.md"

exclude = [
  "HomebrewFormula",
  "/.github/",
  "/ci/",
  "/pkg/",
  "/benchsuite/",
  "/scripts/",
]

[[bin]]
bench = false
path = "crates/cli/main.rs"
name = "bvr"

[workspace]
members = ["crates/core", "crates/test_gen"]

[dependencies]
bvr-core = { version = "0.0.3", path = "crates/core" }
anyhow = "1.0"
clap = { version = "4.4", features = ["cargo", "derive"] }
crossterm = { version = "0.27", features = ["use-dev-tty"] }
ratatui = "0.25"
regex = "1.10"
itoa = "1.0"
bitflags = "2.4"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.flamegraph]
inherits = "release"
debug = true
strip = false