[package]
name = "bvr"
description = "A pager designed to help you chew through logs."
categories = ["command-line-utilities"]
authors = ["An Tran <antranprm@gmail.com>"]
version = "0.0.4"
edition = "2021"
license = "MIT"
keywords = ["cli", "pager"]
homepage = "https://github.com/Avarel/bvr"
repository = "https://github.com/Avarel/bvr"
readme = "README.md"

exclude = [
  "HomebrewFormula",
  "/.github/",
  "/ci/",
  "/pkg/",
  "/benchsuite/",
  "/scripts/",
]

[[bin]]
bench = false
path = "crates/cli/main.rs"
name = "bvr"

[workspace]
members = ["crates/core", "crates/test_gen"]

[dependencies]
bvr-core = { version = "0.0.4", path = "crates/core" }
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo", "derive"] }
crossterm = { version = "0.27", features = ["use-dev-tty"] }
ratatui = "0.26"
regex = "1.10"
itoa = "1.0"
bitflags = "2.4"
lru = "0.12"
arboard = { version = "3.3", features = ["wayland-data-control"] }
shellexpand = "3.1"
shlex = "1.3"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.flamegraph]
inherits = "release"
debug = true
strip = false