[package]
name = "bvr"
description = "A pager designed to help you chew through logs."
categories = ["command-line-utilities"]
authors = ["An Tran <antranprm@gmail.com>"]
version = "0.0.5"
edition = "2024"
license = "MIT"
keywords = ["cli", "pager"]
homepage = "https://github.com/Avarel/bvr"
repository = "https://github.com/Avarel/bvr"
readme = "README.md"

exclude = [
  "HomebrewFormula",
  "/.github/",
  "/ci/",
  "/pkg/",
  "/benchsuite/",
  "/scripts/",
]

[[bin]]
bench = false
path = "crates/cli/main.rs"
name = "bvr"

[workspace]
members = ["crates/core", "crates/test_gen"]

[dependencies]
bvr-core = { version = "0.0.4", path = "crates/core" }

# UI
anyhow = "1.0"
clap = { version = "4.5", features = ["cargo", "derive"] }
crossterm = { version = "0.29.0", features = ["use-dev-tty", "osc52"] }
ratatui = { version = "0.29", features = ["serde", "palette"] }
regex = "1.10"
itoa = "1.0"
bitflags = "2.4"
lru = "0.16"
supports-color = "3.0.0"
unicode-width = "0.2"
unicode-segmentation = "1.12"

# Shell usage
shellexpand = "3.1"
shlex = "1.3"

# Data storage
directories-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.flamegraph]
inherits = "release"
debug = true
strip = false
