[package]
name = "bvr-core"
description = "The file engine used for the bvr pager."
authors = ["An Tran <antranprm@gmail.com>"]
version = "0.0.2"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
thiserror = "1.0"
memchr = "2.6"
memmap2 = "0.9"
lru = "0.12.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
anyhow = "1.0"