[package]
name = "bvr-core"
description = "The core components used for the bvr pager."
authors = ["An Tran <antranprm@gmail.com>"]
version = "0.0.4"
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
thiserror = "2.0"
memchr = "2.7"
memmap2 = "0.9"
lru = "0.16.0"
regex = "1.10"
arc-swap = "1.7"
# im = "15.1"

[dev-dependencies]
anyhow = "1.0"
