[package]
name = "bvr-file"
description = "File indexing for bvr."
authors = ["An Tran <antranprm@gmail.com>"]
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["sync", "fs"] }
memchr = "2.6"
memmap2 = "0.9"
lru = "0.12.0"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "fs", "rt-multi-thread"] }
