[package]
name = "bvr-file"
description = "File engine for bvr."
authors = ["An Tran <antranprm@gmail.com>"]
version = "0.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["sync", "fs"] }
memchr = "2.6"
memmap2 = "0.9"
lru = "0.12.0"
bvr-vec = { path = "../vec" }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "fs", "rt-multi-thread", "io-util"] }
tempfile = "3.8"